--- a/BallClub/BallClub/Storyboards/Maps.storyboard
+++ b/BallClub/BallClub/Storyboards/Maps.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z7a-Ud-xbZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z7a-Ud-xbZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -149,12 +149,13 @@
                                     <constraint firstItem="2dP-qq-a4O" firstAttribute="centerY" secondItem="t72-mA-sMU" secondAttribute="centerY" id="kf8-bU-v75"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SJr-BX-bUZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SJr-BX-bUZ">
                                 <rect key="frame" x="0.0" y="304" width="600" height="247"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="SJr-BX-bUZ" secondAttribute="height" multiplier="600:247" id="89L-qZ-qGE"/>
-                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="gKm-3E-dYg" id="3Zw-QC-Y9t"/>
+                                    <outlet property="delegate" destination="gKm-3E-dYg" id="2Y6-Qz-IhQ"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -165,6 +166,7 @@
                             <constraint firstItem="7y1-YG-6ko" firstAttribute="leading" secondItem="044-hK-kfy" secondAttribute="leadingMargin" constant="-20" id="hNb-lF-Nc0"/>
                             <constraint firstItem="SJr-BX-bUZ" firstAttribute="leading" secondItem="044-hK-kfy" secondAttribute="leadingMargin" constant="-20" id="hng-tp-0Og"/>
                             <constraint firstAttribute="trailingMargin" secondItem="SJr-BX-bUZ" secondAttribute="trailing" constant="-20" id="jyl-hx-gZU"/>
+                            <constraint firstItem="0tQ-dy-osj" firstAttribute="top" secondItem="SJr-BX-bUZ" secondAttribute="bottom" id="lFJ-Zf-VCc"/>
                             <constraint firstItem="t72-mA-sMU" firstAttribute="trailing" secondItem="7y1-YG-6ko" secondAttribute="trailing" id="nBz-jA-FMU"/>
                             <constraint firstItem="t72-mA-sMU" firstAttribute="top" secondItem="7y1-YG-6ko" secondAttribute="bottom" id="njg-Ef-nXW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7y1-YG-6ko" secondAttribute="trailing" constant="-20" id="wkN-51-xhX"/>
@@ -173,6 +175,7 @@
                     <connections>
                         <outlet property="locationGames" destination="Yb1-im-nK3" id="haK-Ub-AH0"/>
                         <outlet property="locationName" destination="wwW-kk-vrP" id="xrt-zn-mXM"/>
+                        <outlet property="mapDetailTableView" destination="SJr-BX-bUZ" id="3gn-yh-BDZ"/>
                         <outlet property="mapView" destination="7y1-YG-6ko" id="HTz-Oh-w1G"/>
                     </connections>
                 </viewController>
