--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -226,11 +226,20 @@
                     <connections>
                         <outlet property="friendsTableView" destination="boT-a7-I9B" id="NTa-4B-qDk"/>
                         <outlet property="searchTextField" destination="YE4-Qp-X6L" id="iQb-r3-N31"/>
+                        <segue destination="cyQ-xu-w2l" kind="show" identifier="FriendsProfileViewControllerSegue" id="abP-np-lwi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uS-SA-01D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1282" y="350"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="rpa-5R-pWX">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Friends" id="cyQ-xu-w2l" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mu8-h3-Ag9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1282.5" y="730"/>
         </scene>
         <!--Create Profile-->
         <scene sceneID="Mfi-CP-qSB">
