--- a/BallClub/BallClub/Custom Views/User/FriendStatusCustomCell.xib
+++ b/BallClub/BallClub/Custom Views/User/FriendStatusCustomCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,8 +15,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="player_shaq" translatesAutoresizingMaskIntoConstraints="NO" id="peI-vn-qbc">
-                        <rect key="frame" x="8" y="4" width="35" height="35"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player_shaq" translatesAutoresizingMaskIntoConstraints="NO" id="peI-vn-qbc">
+                        <rect key="frame" x="8" y="6" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="Mgh-Cw-hfA"/>
+                            <constraint firstAttribute="height" constant="35" id="YQ9-7p-DDa"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="17"/>
@@ -23,24 +28,13 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Erik Spoelstra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBU-fV-pgX">
-                        <rect key="frame" x="51" y="6" width="237" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Eastwood, Quezon City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kun-Hq-ght">
-                        <rect key="frame" x="51" y="24" width="237" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="offline" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-R5-Yom">
-                        <rect key="frame" x="296" y="17" width="15" height="15"/>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9W-OA-t3U">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9W-OA-t3U">
                         <rect key="frame" x="17" y="32" width="16" height="16"/>
                         <color key="backgroundColor" red="0.90196078430000004" green="0.38823529410000002" blue="0.050980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="hL3-Er-knr"/>
+                            <constraint firstAttribute="width" constant="16" id="iB1-c4-bcQ"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <state key="normal" title="C">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -51,7 +45,41 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Erik Spoelstra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBU-fV-pgX">
+                        <rect key="frame" x="51" y="8" width="228" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Eastwood, Quezon City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kun-Hq-ght">
+                        <rect key="frame" x="51" y="23" width="228" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="offline" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-R5-Yom">
+                        <rect key="frame" x="287" y="18" width="15" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="G00-pt-isA"/>
+                            <constraint firstAttribute="width" constant="15" id="iwX-pb-Bmh"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Kun-Hq-ght" firstAttribute="top" secondItem="vBU-fV-pgX" secondAttribute="bottom" constant="-3" id="1tg-zj-LOU"/>
+                    <constraint firstItem="Kun-Hq-ght" firstAttribute="leading" secondItem="vBU-fV-pgX" secondAttribute="leading" id="3sX-6J-pdm"/>
+                    <constraint firstItem="cfJ-R5-Yom" firstAttribute="leading" secondItem="vBU-fV-pgX" secondAttribute="trailing" constant="8" id="84M-9e-oIR"/>
+                    <constraint firstItem="cfJ-R5-Yom" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-0.5" id="8Ku-p9-NS9"/>
+                    <constraint firstItem="peI-vn-qbc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-2" id="E0X-C1-vGR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Kun-Hq-ght" secondAttribute="bottom" constant="-3" id="LMd-VJ-DO0"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="cfJ-R5-Yom" secondAttribute="trailing" constant="10" id="X0Z-Ij-HhW"/>
+                    <constraint firstItem="K9W-OA-t3U" firstAttribute="top" secondItem="peI-vn-qbc" secondAttribute="bottom" constant="-9" id="akJ-Rn-H7U"/>
+                    <constraint firstItem="vBU-fV-pgX" firstAttribute="leading" secondItem="peI-vn-qbc" secondAttribute="trailing" constant="8" id="bgV-wA-DB7"/>
+                    <constraint firstItem="vBU-fV-pgX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="e6b-SU-aPB"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Kun-Hq-ght" secondAttribute="trailing" constant="33" id="g5o-tW-Zwh"/>
+                    <constraint firstItem="peI-vn-qbc" firstAttribute="leading" secondItem="K9W-OA-t3U" secondAttribute="trailing" constant="-25" id="mDp-in-8E3"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="peI-vn-qbc" secondAttribute="leading" id="vyH-ex-3c4"/>
+                </constraints>
             </tableViewCellContentView>
             <point key="canvasLocation" x="139" y="343.5"/>
         </tableViewCell>
