--- a/BallClub/BallClub/Storyboards/Friends.storyboard
+++ b/BallClub/BallClub/Storyboards/Friends.storyboard
@@ -46,7 +46,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_map" translatesAutoresizingMaskIntoConstraints="NO" id="3Ws-wz-Z47">
-                                        <rect key="frame" x="35" y="209" width="20" height="24"/>
+                                        <rect key="frame" x="35" y="209" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="hsM-u5-FeW"/>
                                         </constraints>
@@ -124,7 +124,7 @@
                                     <constraint firstItem="3Ws-wz-Z47" firstAttribute="top" secondItem="p0X-yj-EZN" secondAttribute="bottom" constant="15" id="0Wh-I6-hLL"/>
                                     <constraint firstItem="G9a-KF-sPD" firstAttribute="top" secondItem="39P-ty-1wM" secondAttribute="top" constant="73" id="3pU-Xc-nYI"/>
                                     <constraint firstItem="ktr-4h-Ixe" firstAttribute="top" secondItem="p0X-yj-EZN" secondAttribute="bottom" constant="15" id="7yY-ap-KHa"/>
-                                    <constraint firstAttribute="bottom" secondItem="3Ws-wz-Z47" secondAttribute="bottom" constant="7" id="AGs-jj-cmm"/>
+                                    <constraint firstAttribute="bottom" secondItem="3Ws-wz-Z47" secondAttribute="bottom" constant="11" id="AGs-jj-cmm"/>
                                     <constraint firstItem="kEE-2d-jfl" firstAttribute="leading" secondItem="qYs-yW-CwS" secondAttribute="leading" constant="34" id="DIE-aE-frp"/>
                                     <constraint firstItem="p0X-yj-EZN" firstAttribute="leading" secondItem="HWv-Hc-7Bu" secondAttribute="leading" id="F3L-aF-SVz"/>
                                     <constraint firstItem="XqO-aw-lzQ" firstAttribute="top" secondItem="39P-ty-1wM" secondAttribute="top" id="Gc3-7i-fn5"/>
@@ -134,7 +134,7 @@
                                     <constraint firstItem="XqO-aw-lzQ" firstAttribute="leading" secondItem="39P-ty-1wM" secondAttribute="leading" id="Roe-Nt-09I"/>
                                     <constraint firstAttribute="width" constant="600" id="SUO-Bp-9af"/>
                                     <constraint firstItem="G9a-KF-sPD" firstAttribute="leading" secondItem="qYs-yW-CwS" secondAttribute="trailing" constant="10" id="UPS-ec-Yxa"/>
-                                    <constraint firstItem="3Ws-wz-Z47" firstAttribute="centerY" secondItem="ktr-4h-Ixe" secondAttribute="centerY" constant="1.5" id="VPC-Th-XZI"/>
+                                    <constraint firstItem="3Ws-wz-Z47" firstAttribute="centerY" secondItem="ktr-4h-Ixe" secondAttribute="centerY" constant="-0.5" id="VPC-Th-XZI"/>
                                     <constraint firstItem="A3c-fE-kO1" firstAttribute="leading" secondItem="p0X-yj-EZN" secondAttribute="trailing" constant="40" id="VyX-Sa-vpJ"/>
                                     <constraint firstAttribute="height" constant="240" id="XEj-dt-uf8"/>
                                     <constraint firstItem="ktr-4h-Ixe" firstAttribute="leading" secondItem="3Ws-wz-Z47" secondAttribute="trailing" constant="8" id="Xkt-7O-0xH"/>
@@ -223,9 +223,11 @@
                         <outlet property="tableView" destination="7J2-m9-qsr" id="eiK-zc-yPg"/>
                         <outlet property="userNameLabel" destination="p0X-yj-EZN" id="1Wj-nL-RuX"/>
                         <outlet property="weightTextField" destination="G9a-KF-sPD" id="HZz-Sh-XN0"/>
+                        <segue destination="AKE-g3-A8m" kind="unwind" identifier="unwindToUserStoryboard" unwindAction="unwindToMenu:" id="tE0-Fg-Pw9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZSW-7f-akK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="AKE-g3-A8m" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1922" y="352"/>
         </scene>
