--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -37,6 +37,10 @@
                                                 <integer key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="editingChanged:" destination="1Qb-0J-YXH" eventType="editingChanged" id="OMy-wd-wXJ"/>
+                                            <outlet property="delegate" destination="1Qb-0J-YXH" id="BqD-DV-YS2"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ykj-yW-Wvj">
                                         <rect key="frame" x="564" y="20" width="25" height="25"/>
